--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,14 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <link href="//amp.azure.net/libs/amp/latest/skins/amp-default/azuremediaplayer.min.css" rel="stylesheet">
+  <script src= "//amp.azure.net/libs/amp/latest/azuremediaplayer.min.js"></script>
+
+  <script src="scripts/jquery-1.10.2.min.js"></script>
+  <script src="scripts/jquery-ui-1.9.2.min.js"></script>
+  <!--<script src="scripts/azure.js"></script>-->
+
 </head>
 <body>
   <app-root></app-root>
